--- a/home-dir.ipynb
+++ b/home-dir.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -84,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +165,25 @@
       "Epoch 5/15\n",
       "50000/50000 [==============================] - 58s - loss: 0.8604 - acc: 0.6974    \n",
       "Epoch 6/15\n",
-      "24128/50000 [=============>................] - ETA: 30s - loss: 0.7935 - acc: 0.7201"
+      "50000/50000 [==============================] - 61s - loss: 0.7896 - acc: 0.7209    \n",
+      "Epoch 7/15\n",
+      "50000/50000 [==============================] - 59s - loss: 0.7282 - acc: 0.7441    \n",
+      "Epoch 8/15\n",
+      "50000/50000 [==============================] - 62s - loss: 0.6787 - acc: 0.7604    \n",
+      "Epoch 9/15\n",
+      "50000/50000 [==============================] - 61s - loss: 0.6314 - acc: 0.7782    \n",
+      "Epoch 10/15\n",
+      "50000/50000 [==============================] - 60s - loss: 0.5896 - acc: 0.7937    \n",
+      "Epoch 11/15\n",
+      "50000/50000 [==============================] - 59s - loss: 0.5489 - acc: 0.8062    \n",
+      "Epoch 12/15\n",
+      "50000/50000 [==============================] - 61s - loss: 0.5136 - acc: 0.8190    \n",
+      "Epoch 13/15\n",
+      "50000/50000 [==============================] - 58s - loss: 0.4756 - acc: 0.8331    \n",
+      "Epoch 14/15\n",
+      "50000/50000 [==============================] - 59s - loss: 0.4407 - acc: 0.8452    \n",
+      "Epoch 15/15\n",
+      "50000/50000 [==============================] - 58s - loss: 0.4095 - acc: 0.8562    \n"
      ]
     }
    ],
@@ -195,12 +206,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 9856/10000 [============================>.] - ETA: 0s0.8599996905326843 0.7354\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = model.evaluate(x_test, y_test) \n",
+    "print(test_loss, test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loss, test_acc = model.evaluate(x_test, y_test) \n",
-    "print(test_loss, test_acc)"
+    "# There is clearly both a high bias and high variance here -- will work to change this in the future"
    ]
   }
  ],
