added cifar100 training

--- a/cifar10.ipynb
+++ b/cifar10.ipynb
@@ -18,8 +18,7 @@
     "from keras.utils import to_categorical\n",
     "from keras import layers\n",
     "from keras import models\n",
-    "from keras.applications.resnet50 import ResNet50\n",
-    "from keras.layers import Input, Conv2D, MaxPooling2D, Input, GlobalAveragePooling2D\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Input, GlobalAveragePooling2D\n",
     "from keras.layers import Add, Flatten, AveragePooling2D, Dense\n",
     "from keras.models import Model"
    ]
