added cifar100.py file

--- a/cifar100.ipynb
+++ b/cifar100.ipynb
@@ -43,17 +43,12 @@
    "source": [
     "from keras.callbacks import Callback, LearningRateScheduler, TensorBoard, ModelCheckpoint\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "# from keras.utils import print_summary, to_categorical\n",
+    "\n",
     "from keras import backend as K\n",
     "import sys\n",
     "import os\n",
     "import numpy as np\n",
-    "from keras.callbacks import (\n",
-    "    LearningRateScheduler,\n",
-    "    ReduceLROnPlateau,\n",
-    "    CSVLogger,\n",
-    "    EarlyStopping,\n",
-    ")"
+    "from keras.callbacks import LearningRateScheduler, ReduceLROnPlateau, CSVLogger, EarlyStopping"
    ]
   },
   {
@@ -368,7 +363,7 @@
       "Instructions for updating:\n",
       "Use tf.cast instead.\n",
       "Epoch 1/250\n",
-      " 162/1562 [==>...........................] - ETA: 311s - loss: 4.6411 - acc: 0.0297"
+      "1561/1562 [============================>.] - ETA: 0s - loss: 3.8351 - acc: 0.1166"
      ]
     }
    ],
