added saved model

--- a/cifar10.ipynb
+++ b/cifar10.ipynb
@@ -2,25 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from tensorflow import keras\n",
     "from keras.datasets import cifar10\n",
     "from keras.utils import to_categorical\n",
     "from keras import layers\n",
     "from keras import models\n",
     "from keras.layers import Conv2D, MaxPooling2D, Input, GlobalAveragePooling2D\n",
     "from keras.layers import Add, Flatten, AveragePooling2D, Dense\n",
-    "from keras.models import Model"
+    "from keras.models import Model\n",
+    "from keras import optimizers"
    ]
   },
   {
@@ -154,35 +148,35 @@
       "Use tf.cast instead.\n",
       "WARNING:tensorflow:Variable *= will be deprecated. Use `var.assign(var * other)` if you want assignment to the variable value or `x = x * y` if you want a new python Tensor object.\n",
       "Epoch 1/15\n",
-      "50000/50000 [==============================] - 58s - loss: 1.5759 - acc: 0.4306    \n",
+      "50000/50000 [==============================] - 68s - loss: 1.5768 - acc: 0.4294    \n",
       "Epoch 2/15\n",
-      "50000/50000 [==============================] - 61s - loss: 1.2113 - acc: 0.5700    \n",
+      "50000/50000 [==============================] - 65s - loss: 1.2190 - acc: 0.5662    \n",
       "Epoch 3/15\n",
-      "50000/50000 [==============================] - 59s - loss: 1.0544 - acc: 0.6274    \n",
+      "50000/50000 [==============================] - 71s - loss: 1.0486 - acc: 0.6292    \n",
       "Epoch 4/15\n",
-      "50000/50000 [==============================] - 63s - loss: 0.9415 - acc: 0.6678    \n",
+      "50000/50000 [==============================] - 78s - loss: 0.9340 - acc: 0.6716    \n",
       "Epoch 5/15\n",
-      "50000/50000 [==============================] - 58s - loss: 0.8604 - acc: 0.6974    \n",
+      "50000/50000 [==============================] - 72s - loss: 0.8471 - acc: 0.7017    \n",
       "Epoch 6/15\n",
-      "50000/50000 [==============================] - 61s - loss: 0.7896 - acc: 0.7209    \n",
+      "50000/50000 [==============================] - 72s - loss: 0.7782 - acc: 0.7252    \n",
       "Epoch 7/15\n",
-      "50000/50000 [==============================] - 59s - loss: 0.7282 - acc: 0.7441    \n",
+      "50000/50000 [==============================] - 68s - loss: 0.7196 - acc: 0.7477    \n",
       "Epoch 8/15\n",
-      "50000/50000 [==============================] - 62s - loss: 0.6787 - acc: 0.7604    \n",
+      "50000/50000 [==============================] - 70s - loss: 0.6699 - acc: 0.7648    \n",
       "Epoch 9/15\n",
-      "50000/50000 [==============================] - 61s - loss: 0.6314 - acc: 0.7782    \n",
+      "50000/50000 [==============================] - 79s - loss: 0.6233 - acc: 0.7823    \n",
       "Epoch 10/15\n",
-      "50000/50000 [==============================] - 60s - loss: 0.5896 - acc: 0.7937    \n",
+      "50000/50000 [==============================] - 67s - loss: 0.5783 - acc: 0.7959    \n",
       "Epoch 11/15\n",
-      "50000/50000 [==============================] - 59s - loss: 0.5489 - acc: 0.8062    \n",
+      "50000/50000 [==============================] - 68s - loss: 0.5420 - acc: 0.8097    \n",
       "Epoch 12/15\n",
-      "50000/50000 [==============================] - 61s - loss: 0.5136 - acc: 0.8190    \n",
+      "50000/50000 [==============================] - 78s - loss: 0.5030 - acc: 0.8227    \n",
       "Epoch 13/15\n",
-      "50000/50000 [==============================] - 58s - loss: 0.4756 - acc: 0.8331    \n",
+      "50000/50000 [==============================] - 67s - loss: 0.4686 - acc: 0.8370    \n",
       "Epoch 14/15\n",
-      "50000/50000 [==============================] - 59s - loss: 0.4407 - acc: 0.8452    \n",
+      "50000/50000 [==============================] - 69s - loss: 0.4322 - acc: 0.8492    \n",
       "Epoch 15/15\n",
-      "50000/50000 [==============================] - 58s - loss: 0.4095 - acc: 0.8562    \n"
+      "50000/50000 [==============================] - 69s - loss: 0.4030 - acc: 0.8581    \n"
      ]
     }
    ],
@@ -212,7 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9856/10000 [============================>.] - ETA: 0s0.8599996905326843 0.7354\n"
+      "10000/10000 [==============================] - 3s     \n",
+      "0.8689120760917663 0.7295\n"
      ]
     }
    ],
@@ -223,12 +218,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the model\n",
+    "model.save('model1.h5')\n",
+    "\n",
+    "# Recreate the exact same model purely from the file\n",
+    "new_model = keras.models.load_model('model1.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# There is clearly both a high bias and high variance here -- will work to change this in the future"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.engine.training.Model at 0x143964518>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'predictions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-e91b8d3a22f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Check that the state is preserved\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnew_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_predictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Note that the optimizer state is preserved as well:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'predictions' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Check that the state is preserved\n",
+    "new_predictions = new_model.predict(x_test)\n",
+    "np.testing.assert_allclose(predictions, new_predictions, rtol=1e-6, atol=1e-6)\n",
+    "\n",
+    "# Note that the optimizer state is preserved as well:\n",
+    "# you can resume training where you left off."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
